--- a/portfolio.css
+++ b/portfolio.css
@@ -13,7 +13,7 @@ nav{
     font-family: Open Sans;
     font-size: 45px;
     font-style: normal;
-    font-weight: 800;
+    font-weight: 100;
     line-height: normal;
 
 }
@@ -32,15 +32,28 @@ nav li{
 nav a {
     text-decoration: none;
     color: #181818;
+    margin: 0 5px;
 }
 .btn{
     color: var(--White-Color, #FFF);
 font-family: Open Sans;
 font-size: 20px;
 font-style: normal;
-font-weight: 700;
+font-weight: 100;
 line-height: normal;
 border-radius: 5px;
 background: #FD6E0A;
 padding: 15px 35px;
+}
+.header{
+    background-color: #FFF;
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.banner .profile-photo{
+    width: 500px;
+
 }
