--- a/portfolio.css
+++ b/portfolio.css
@@ -2,6 +2,24 @@
 body{
     font-family: 'Open Sans', sans-serif;
 }
+.section-title{
+    color: var(--Dark-01, #181818);
+text-align: center;
+font-family: Open Sans;
+font-size: 35px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+.section-dis{
+    color: var(--Dark-03, #757575);
+text-align: center;
+font-family: Open Sans;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px; /* 166.667% */
+}
 /*Portfolio Style*/
 nav{
    display: flex;
@@ -47,13 +65,45 @@ padding: 15px 35px;
 }
 .header{
     background-color: #FFF;
+    background-image: url("/images/header_bg.png");
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 .banner{
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+}
+.ba-co{
+    max-width: 500px;
 }
 .banner .profile-photo{
     width: 500px;
 
+}
+.banner-greeting{
+    color: var(--Dark-02, #474747);
+font-family: Open Sans;
+font-size: 45px;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+margin-bottom: 0px;
+}
+.banner-title{
+    color: var(--Dark-01, #181818);
+font-family: Open Sans;
+font-size: 85px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+margin-top: 5px;
+margin-bottom: 20px;
+}
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 150px;
 }
