--- a/portfolio.css
+++ b/portfolio.css
@@ -107,3 +107,11 @@ margin-bottom: 20px;
     background: #FFF8F3;
     margin: 130px 150px;
 }
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+
+}
+.about-info{
+    text-align: center;
+}
