--- a/portfolio.css
+++ b/portfolio.css
@@ -115,3 +115,16 @@ margin-bottom: 20px;
 .about-info{
     text-align: center;
 }
+.section-description{
+    margin: 10px 300px;
+    color: var(--Dark-03, #757575);
+    text-align: center;
+    font-family: Open Sans;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px; /* 166.667% */
+    table-layout: width: 909px;
+    padding: 30px 150px;
+    
+}
