--- a/portfolio.css
+++ b/portfolio.css
@@ -100,6 +100,14 @@ font-weight: 700;
 line-height: normal;
 margin-top: 5px;
 margin-bottom: 20px;
+
+}
+main{
+    max-width: 2000px;
+    margin: auto;
+}
+main section{
+    margin-top: 130px;
 }
 .about{
     padding: 130px;
@@ -127,4 +135,58 @@ margin-bottom: 20px;
     table-layout: width: 909px;
     padding: 30px 150px;
     
+}
+.skill-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    text-align: justify;
+    font-size: large;
+    
+}
+.skill-description{
+    color: var(--Dark-03, #757575);
+}
+.resume-colum-title{
+    color: var(--Dark-02, #474747);
+    font-size: 30px;
+   font-weight: 700;
+   
+}
+.resumi-container{
+    display: flex;
+    gap: 50px;
+}
+.resumi-item-title{
+    color: var(--Dark-02, #474747);
+font-family: Open Sans;
+font-size: 25px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+.resumi-item-ins{
+    color: var(--Dark-03, #757575);
+    font-family: Open Sans;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+.resumi-item-descreption{
+    color: var(--Dark-03, #757575);
+    font-family: Open Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px; /* 175% */
+}
+.dawnlode-cv{
+    text-align: center;
+    margin-top: 50px;
 }
