--- a/portfolio.css
+++ b/portfolio.css
@@ -208,4 +208,42 @@ footer{
     margin: 100px;  
     background: #FFF8F3;
     padding: 130px 200px;
+    gap: 100px;
+}
+.footer-colum{
+    width: 50%;
+}
+.footer-des{
+    color: var(--Dark-02, #474747);
+font-family: Open Sans;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 28px; /* 175% */
+}
+.social-links{
+    padding-right: 230;
+}
+form{
+    padding: 24px;
+    text-align: center;
+    gap: 24px;
+    
+    
+}
+.fr input[type="text"],  input[type="email"], textarea{
+    display: block;
+    margin-bottom: 24px;  
+    padding: 16px;color: var(--Dark-03, #757575);
+    font-family: Open Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px; /* 175% */
+    border-radius: 5px;
+    background: var(--White-Color, #FFF);
+    width: 100%;
+    
+  
+    
 }
